--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,3 +1,13 @@
 .debug{
     border: dashed black;
 }
+$theme-colors: (
+  "primary":    $primary,
+  "secondary":  $secondary,
+  "success":    $success,
+  "info":       $info,
+  "warning":    $warning,
+  "danger":     $danger,
+  "light":      $light,
+  "dark":       $dark
+);
