--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -9,3 +9,19 @@
   .debug{
     border: dashed black;
   }
+
+  .line_star_white {
+    border:1px solid white;
+    background-color: white;
+    display: inline-block;
+    width: 10%;
+    vertical-align: middle;
+  }
+  
+  .line_star_black {
+    border:1px solid black;
+    background-color: black;
+    display: inline-block;
+    width: 10%;
+    vertical-align: middle;
+  }
